# AI-Reviewer

./: .gitignore  ai_reviewer.py  pyproject.toml
ai_reviewer/: __main__.py
config/: config.example.yaml
docs/: README_zh.md
examples/.github/workflows/: ai-review.yml
examples/docs/: coding_standards.md  security_guidelines.md
src/: __init__.py
src/ai/: __init__.py  reviewer.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  logging_config.py  models.py
src/git/: __init__.py  client.py
src/rag/: __init__.py  intent.py  manager.py
src/report/: __init__.py  generator.py
src/scanner/: __init__.py  parser.py
tests/: conftest.py  test_models.py  test_rag.py  test_report.py  test_scanner.py
